Makefile, spec, systemd: sync changes from Foomuuri

--- a/systemd/foosnapper.service
+++ b/systemd/foosnapper.service
@@ -3,5 +3,6 @@ Description=Automatic filesystem snapshooter
 After=stratisd.service
 
 [Service]
+Type=oneshot
+ExecStart=foosnapper
 IOSchedulingClass=idle
-ExecStart=/usr/bin/foosnapper
