--- a/etc/foosnapper.conf
+++ b/etc/foosnapper.conf
@@ -1,4 +1,4 @@
-# foosnapper.conf - Foosnapper, automatic filesystem snapshooter.
+# foosnapper.conf - Foosnapper, automatic filesystem snapshotter.
 
 # Stratis example:
 #
